out
test.cpp: In function ‘void solve()’:
test.cpp:333:21: error: no match for ‘operator*’ (operand types are ‘__gnu_cxx::__alloc_traits<std::allocator<char>, char>::value_type’ {aka ‘char’} and ‘mints’)
  333 |         hb += T[i+N]*mx;
In file included from /usr/include/c++/12/ccomplex:39,
                 from stdc++.h:54:
/usr/include/c++/12/complex:392:5: note: candidate: ‘template<class _Tp> constexpr std::complex<_Tp> std::operator*(const complex<_Tp>&, const complex<_Tp>&)’
  392 |     operator*(const complex<_Tp>& __x, const complex<_Tp>& __y)
      |     ^~~~~~~~
/usr/include/c++/12/complex:392:5: note:   template argument deduction/substitution failed:
test.cpp:333:22: note:   mismatched types ‘const std::complex<_Tp>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<char>, char>::value_type’ {aka ‘char’}
  333 |         hb += T[i+N]*mx;
      |                      ^~
/usr/include/c++/12/complex:401:5: note: candidate: ‘template<class _Tp> constexpr std::complex<_Tp> std::operator*(const complex<_Tp>&, const _Tp&)’
  401 |     operator*(const complex<_Tp>& __x, const _Tp& __y)
      |     ^~~~~~~~
/usr/include/c++/12/complex:401:5: note:   template argument deduction/substitution failed:
test.cpp:333:22: note:   mismatched types ‘const std::complex<_Tp>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<char>, char>::value_type’ {aka ‘char’}
  333 |         hb += T[i+N]*mx;
      |                      ^~
/usr/include/c++/12/complex:410:5: note: candidate: ‘template<class _Tp> constexpr std::complex<_Tp> std::operator*(const _Tp&, const complex<_Tp>&)’
  410 |     operator*(const _Tp& __x, const complex<_Tp>& __y)
      |     ^~~~~~~~
/usr/include/c++/12/complex:410:5: note:   template argument deduction/substitution failed:
test.cpp:333:22: note:   ‘mints’ is not derived from ‘const std::complex<_Tp>’
  333 |         hb += T[i+N]*mx;
      |                      ^~
In file included from /usr/include/c++/12/valarray:603,
                 from stdc++.h:95:
/usr/include/c++/12/bits/valarray_after.h:407:5: note: candidate: ‘template<class _Dom1, class _Dom2> std::_Expr<std::__detail::_BinClos<std::__multiplies, std::_Expr, std::_Expr, _Dom1, _Dom2>, typename std::__fun<std::__multiplies, typename _Dom1::value_type>::result_type> std::operator*(const _Expr<_Dom1, typename _Dom1::value_type>&, const _Expr<_Dom2, typename _Dom2::value_type>&)’
  407 |     _DEFINE_EXPR_BINARY_OPERATOR(*, struct std::__multiplies)
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/bits/valarray_after.h:407:5: note:   template argument deduction/substitution failed:
test.cpp:333:22: note:   mismatched types ‘const std::_Expr<_Dom1, typename _Dom1::value_type>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<char>, char>::value_type’ {aka ‘char’}
  333 |         hb += T[i+N]*mx;
      |                      ^~
/usr/include/c++/12/bits/valarray_after.h:407:5: note: candidate: ‘template<class _Dom> std::_Expr<std::__detail::_BinClos<std::__multiplies, std::_Expr, std::_Constant, _Dom, typename _Dom::value_type>, typename std::__fun<std::__multiplies, typename _Dom1::value_type>::result_type> std::operator*(const _Expr<_Dom1, typename _Dom1::value_type>&, const typename _Dom::value_type&)’
  407 |     _DEFINE_EXPR_BINARY_OPERATOR(*, struct std::__multiplies)
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/bits/valarray_after.h:407:5: note:   template argument deduction/substitution failed:
test.cpp:333:22: note:   mismatched types ‘const std::_Expr<_Dom1, typename _Dom1::value_type>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<char>, char>::value_type’ {aka ‘char’}
  333 |         hb += T[i+N]*mx;
      |                      ^~
/usr/include/c++/12/bits/valarray_after.h:407:5: note: candidate: ‘template<class _Dom> std::_Expr<std::__detail::_BinClos<std::__multiplies, std::_Constant, std::_Expr, typename _Dom::value_type, _Dom>, typename std::__fun<std::__multiplies, typename _Dom1::value_type>::result_type> std::operator*(const typename _Dom::value_type&, const _Expr<_Dom1, typename _Dom1::value_type>&)’
  407 |     _DEFINE_EXPR_BINARY_OPERATOR(*, struct std::__multiplies)
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/bits/valarray_after.h:407:5: note:   template argument deduction/substitution failed:
test.cpp:333:22: note:   ‘mints’ is not derived from ‘const std::_Expr<_Dom1, typename _Dom1::value_type>’
  333 |         hb += T[i+N]*mx;
      |                      ^~
/usr/include/c++/12/bits/valarray_after.h:407:5: note: candidate: ‘template<class _Dom> std::_Expr<std::__detail::_BinClos<std::__multiplies, std::_Expr, std::_ValArray, _Dom, typename _Dom::value_type>, typename std::__fun<std::__multiplies, typename _Dom1::value_type>::result_type> std::operator*(const _Expr<_Dom1, typename _Dom1::value_type>&, const valarray<typename _Dom::value_type>&)’
  407 |     _DEFINE_EXPR_BINARY_OPERATOR(*, struct std::__multiplies)
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/bits/valarray_after.h:407:5: note:   template argument deduction/substitution failed:
test.cpp:333:22: note:   mismatched types ‘const std::_Expr<_Dom1, typename _Dom1::value_type>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<char>, char>::value_type’ {aka ‘char’}
  333 |         hb += T[i+N]*mx;
      |                      ^~
/usr/include/c++/12/bits/valarray_after.h:407:5: note: candidate: ‘template<class _Dom> std::_Expr<std::__detail::_BinClos<std::__multiplies, std::_ValArray, std::_Expr, typename _Dom::value_type, _Dom>, typename std::__fun<std::__multiplies, typename _Dom1::value_type>::result_type> std::operator*(const valarray<typename _Dom::value_type>&, const _Expr<_Dom1, typename _Dom1::value_type>&)’
  407 |     _DEFINE_EXPR_BINARY_OPERATOR(*, struct std::__multiplies)
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/bits/valarray_after.h:407:5: note:   template argument deduction/substitution failed:
test.cpp:333:22: note:   ‘mints’ is not derived from ‘const std::_Expr<_Dom1, typename _Dom1::value_type>’
  333 |         hb += T[i+N]*mx;
      |                      ^~
/usr/include/c++/12/valarray:1188:1: note: candidate: ‘template<class _Tp> std::_Expr<std::__detail::_BinClos<std::__multiplies, std::_ValArray, std::_ValArray, _Tp, _Tp>, typename std::__fun<std::__multiplies, _Tp>::result_type> std::operator*(const valarray<_Tp>&, const valarray<_Tp>&)’
 1188 | _DEFINE_BINARY_OPERATOR(*, __multiplies)
      | ^~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/valarray:1188:1: note:   template argument deduction/substitution failed:
test.cpp:333:22: note:   mismatched types ‘const std::valarray<_Tp>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<char>, char>::value_type’ {aka ‘char’}
  333 |         hb += T[i+N]*mx;
      |                      ^~
/usr/include/c++/12/valarray:1188:1: note: candidate: ‘template<class _Tp> std::_Expr<std::__detail::_BinClos<std::__multiplies, std::_ValArray, std::_Constant, _Tp, _Tp>, typename std::__fun<std::__multiplies, _Tp>::result_type> std::operator*(const valarray<_Tp>&, const typename valarray<_Tp>::value_type&)’
 1188 | _DEFINE_BINARY_OPERATOR(*, __multiplies)
      | ^~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/valarray:1188:1: note:   template argument deduction/substitution failed:
test.cpp:333:22: note:   mismatched types ‘const std::valarray<_Tp>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<char>, char>::value_type’ {aka ‘char’}
  333 |         hb += T[i+N]*mx;
      |                      ^~
/usr/include/c++/12/valarray:1188:1: note: candidate: ‘template<class _Tp> std::_Expr<std::__detail::_BinClos<std::__multiplies, std::_Constant, std::_ValArray, _Tp, _Tp>, typename std::__fun<std::__multiplies, _Tp>::result_type> std::operator*(const typename valarray<_Tp>::value_type&, const valarray<_Tp>&)’
 1188 | _DEFINE_BINARY_OPERATOR(*, __multiplies)
      | ^~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/valarray:1188:1: note:   template argument deduction/substitution failed:
test.cpp:333:22: note:   ‘mints’ is not derived from ‘const std::valarray<_Tp>’
  333 |         hb += T[i+N]*mx;
      |                      ^~
test.cpp:227:4: note: candidate: ‘Pr operator*(Pr, Pr)’
  227 | Pr operator* (Pr a, Pr b) {return {a.first*b.first, a.second*b.second};}
      |    ^~~~~~~~
test.cpp:227:18: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<char>, char>::value_type’ {aka ‘char’} to ‘Pr’ {aka ‘std::pair<long long int, long long int>’}
  227 | Pr operator* (Pr a, Pr b) {return {a.first*b.first, a.second*b.second};}
      |               ~~~^
